<?xml version="1.0"?>
<package format="2">
  <name>custom_msgs</name>
  <version>0.0.0</version>
  <description>The custom_msgs package</description>
  <maintainer email="user@todo.todo">TODO: Maintainer Name</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
